--- a/app/src/main/res/layout/window.xml
+++ b/app/src/main/res/layout/window.xml
@@ -5,6 +5,18 @@
     android:layout_height="match_parent"
     android:background="@drawable/border">
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="我该怎么跳"
+        android:textColor="#00ff00"
+        android:textSize="25sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/control"
         android:layout_width="match_parent"
